@@ -1,0 +1,13 @@
+[vset PACKAGE iban]
+[vset VERSION 1]
+[vset A an]
+[vset NAME IBAN]
+[vset NAMEX {International Bank Account Number}]
+[vset CODE IBAN]
+[vset OK  ....]
+[vset BAD ....]
+[vset KEYWORDS k_iban]
+[vset REQUIRE null]
+[vset METHODS null]
+[vset CODES null]
+[include include/vtype.inc]
