@@ -1,4 +1,4 @@
-[keywords {credit card}]
+[keywords {credit card} bank finance]
 [keywords {card for credit}]
 [keywords AMEX]
 [keywords {American Express}]
